tests/auto/sql/models/qsqlrelationaldelegate/qsqlrelationaldelegate.pro
@@ -1,0 +1,5 @@
+CONFIG += testcase
+TARGET = tst_qsqlrelationaldelegate
+SOURCES  += tst_qsqlrelationaldelegate.cpp
+
+QT = core sql testlib core-private sql-private widgets
